# FWGen-WebGUI

./: .replit  README.md  pyproject.toml  replit.md
PCILeechFWGenerator/: .coveragerc  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  AUTHORS.rst  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  Containerfile  DEVELOPMENT.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  SECURITY.md  build_vfio_constants.sh  entrypoint.sh  force_vfio_binds.sh  get_version.py  help_ticket.sh  install-sudo-wrapper.sh  mypy_dev.ini  patch_vfio_constants.py  pcileech-sudo  pcileech.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-security.txt  requirements-test.txt  requirements-tui.txt  requirements.txt  run_tests.sh  setup.cfg  setup.py  static-analysis.datadog.yml  tox.ini  vfio_helper.c
PCILeechFWGenerator/.cleanthat/: cleanthat.yaml  spotless.yaml
PCILeechFWGenerator/.github/: dependabot.yml
PCILeechFWGenerator/.github/ISSUE_TEMPLATE/: bug_report.md  device_report.md
PCILeechFWGenerator/.github/workflows/: consolidated-ci.yml  datadog.yml  e2e-testing.yml  label.yml  release.yml  security.yml  stale.yml
PCILeechFWGenerator/configs/: fallbacks.yaml
PCILeechFWGenerator/gui/: app.py
PCILeechFWGenerator/gui/templates/: index.html
PCILeechFWGenerator/scripts/: __init__.py  analyze_imports.py  analyze_templates.py  barviz.py  build_container.sh  build_docs.sh  build_release.sh  bump_version.py  check_template_syntax.py  check_templates.sh  ci_safety_checks.sh  clone_donor.sh  e2e_test_github_actions.py  gen_template_reference.py  generate_api_docs.py  generate_pypi_package.py  iommu_viewer.py  lint_sv_block_decls.py  pre-commit-systemverilog-validation.sh  pypi_build.sh  release.py  run_performance.py  set_version.py  update_changelog.py  update_readme_status.py  update_version.py  validate_constraints.py  validate_generation_patterns.py  validate_production_config.py  validate_project_systemverilog.py  validate_systemverilog_templates.py  validate_template_security.py  validate_template_security.sh  validate_template_syntax.py  validate_template_variables.py  vfio_container_manager.py  visualize_coe.py
PCILeechFWGenerator/site/: .gitignore  build.sh  mkdocs.yml  requirements.txt
PCILeechFWGenerator/site/docs/: config-space-shadow.md  development.md  device-cloning.md  dynamic-device-capabilities.md  firmware-uniqueness.md  index.md  installation.md  manual-donor-dump.md  no-fallback-policy.md  quick-start.md  supported-devices.md  template-architecture.md  troubleshooting.md  tui-readme.md
PCILeechFWGenerator/site/worker/: package.json  wrangler.toml
PCILeechFWGenerator/src/: __init__.py  __version__.py  build.py  build_cli.py  build_helpers.py  error_utils.py  exceptions.py  flash_fpga.py  import_utils.py  log_config.py  pcileech_core_discovery.py  pcileech_main.py  shell.py  string_utils.py
PCILeechFWGenerator/tests/: conftest.py  create_mock_sysfs.sh  integration_smoke.sh  run_tui_tests.py  run_unit_tests.py  test_advanced_sv_perf.py  test_attribute_access.py  test_bar_content_generator.py  test_bar_implementation_generation.py  test_bar_model_loader.py  test_bar_parser.py  test_bar_size_conversion.py  test_bar_size_validator.py  test_bar_visualization.py  test_bdf_validator.py  test_behavior_profiler.py  test_behavioral.py  test_board_part_regression.py  test_build.py  test_build_additions.py  test_build_cli_entry.py  test_build_comprehensive.py  test_build_context_strict.py  test_build_helpers_unit.py  test_build_logger.py  test_build_preloaded_config.py  test_build_wrapper.py  test_cli_build_wrapper.py  test_cli_device_prioritizer.py  test_cli_modules_comprehensive.py  test_cli_vfio.py  test_coe_error_injection.py  test_coe_report.py  test_config_space_manager.py  test_config_space_manager_advanced.py  test_config_space_manager_robust.py  test_container_unit.py  test_default_build_smoke.py  test_device_config.py  test_device_config_fallback.py  (+98 more)
(+344 files in other folders)
