[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "colorlog>=6.10.1",
    "jinja2>=3.1.6",
    "psutil>=7.2.2",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "pyyaml>=6.0.3",
    "rich>=14.3.2",
    "textual>=7.5.0",
    "typing-extensions>=4.15.0",
]
